adding crud products
